# e2e-planner

./: .gitignore  README.md  config.py  pyproject.toml  train.py  viz.py
data/: __init__.py  dataset.py  nv_ai_av_dataset.py
models/: __init__.py  e2e_planner.py  patch_embed.py  planning_head.py  spatial_encoder.py  temporal_encoder.py
